# ChangeLog for media-gfx/scrot
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/scrot/ChangeLog,v 1.24 2013/07/27 20:19:02 aballier Exp $

  27 Jul 2013; Alexis Ballier <aballier@gentoo.org> scrot-0.8.ebuild:
  keyword ~amd64-fbsd thanks to Yuta SATOH, bug #477644

  04 Jan 2013; Ulrich Müller <ulm@gentoo.org> scrot-0.8.ebuild:
  Fix LICENSE, see COPYING, bug 448184.

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> scrot-0.8.ebuild:
  Fix quoting.

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> scrot-0.8.ebuild:
  Stable for HPPA too.

  19 Mar 2007; Samuli Suominen <drac@gentoo.org> scrot-0.8.ebuild:
  Remove README and TODO from dodoc; empty or same as INSTALL.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  23 Jan 2007; Peter Weller <welp@gentoo.org> scrot-0.8.ebuild:
  Keyworded ~x86-fbsd

  13 Sep 2005; Aron Griffis <agriffis@gentoo.org> scrot-0.8.ebuild:
  Mark 0.8 stable on alpha

  09 Dec 2004; Mike Doty <kingtaco@gentoo.org> scrot-0.8.ebuild:
  stable on amd64.  see bug #73936

  06 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> scrot-0.8.ebuild:
  Remove pkg_postinst since bash-completion.eclass now exports it.

  03 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> scrot-0.8.ebuild:
  Updated to use bash-completion.eclass

  04 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> scrot-0.8.ebuild:
  Fixed minor bug where make install installs docs in /usr/doc/${PN}.

  11 Sep 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml,
  scrot-0.8.ebuild:
  Fixed LICENSE declaration, updated metadata info, and added a bash-completion
  script (please test).

  31 Jul 2004; Tom Gall <tgall@gentoo.org> scrot-0.8.ebuild:
  stable on ppc64, bug #57034

  03 Jul 2004; Jason Wever <weeve@gentoo.org> scrot-0.8.ebuild:
  Added ~sparc keyword.

  26 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> scrot-0.8.ebuild:
  Marked ~amd64.
