@@ -3,13 +3,26 @@ Hash: SHA256
 
 AUX scrot.bash-completion 1063 SHA256 fdae201eacd656fd817d6ef3663b4b2256fa079ef010705587399b423c84ef42 SHA512 ce8df63bb5b10dbf19f465f2629ebe7045d84105f3da70a49f2bde6a0a416a8f14a02ba3e7d3a8aeba144a592b45a770929b56f6ae7ac867222213ac8f923a0f WHIRLPOOL 221eea17ae544fab6842bead1a87b4c97bd7903bd3ce71d492671141bc0db732a3f7501b5cb5563ce778c15b18bdc4c988a36b7f0e5a2bd37a9057afc4613d0e
 DIST scrot-0.8.tar.gz 74324 SHA256 613d1cf524c2b62ce3c65f1232ea4f05c7daf248d5e82ff2a6892c98093994f2 SHA512 cba8f589e45758ddbfe4e276399a1ecb0dbe29569be5d85d97733e7f64de2911bd2d03e62700ad0c718a1fc886c2e3def9dee1de5cac884f9e65e772cebe838c WHIRLPOOL 713e21755b7252d8bb32ec499674249ab29015e1896e67e98be02c403f7b20973389617698195f93ebc7f77249e14122e402f9fb4a110ac7bdbdb62c57863cab
+EBUILD scrot-0.8-r1.ebuild 772 SHA256 612a3510f2ae7354ee9edad81bfa5a53b35a79d95fbc151f804e3676eb786b6a SHA512 54818f48bb97f1a5f0414a2dc42aeae4bc24efe9a92f2caf559ebc6f1025df1b0581cf2c57ed499eb92a6bd9e8fe50c399bfd8c02eeb3c3a88630ab2c6d79cfd WHIRLPOOL 8c3644ad0319dff7d696bdf7051b739b48d451a21516209501b97170f9547e85ed8fd6eec80a5dc53b123d8a016d824b4345d1398adb91547cd6edbb89fa512e
 EBUILD scrot-0.8.ebuild 743 SHA256 fdd95128743bf2a8cc97c1b80d987de240d05c68ab8d2aabe24e66d77f41534d SHA512 c40d796e3270ed98e88720c45c6c7eb99863036cf75a27b5eb54bb3a4c0e000605e88beb0481854420eec7c87c5d9148fbd21258de2e3115f4590de2402f74cf WHIRLPOOL ef33ea93e3f0366fee6d6ec033096c3d3f2513fb5770e1edc24fc9db56264ef6e00a62759a865ba81ce23de01a99132621bdc10de3d06f8ca456a5996369d966
-MISC ChangeLog 3056 SHA256 66470b19899440aa0cf57e05f923d8d55d6828452ea520d7178cbac1df3acd75 SHA512 a23a4dc51e04a9d8916a4236e8d79459d9fcea27544c4bd74002095167ba1d38f198e75fa5dd414c0461bd30d5259609db3713145187d5f8bea4f6d81a3fe7ae WHIRLPOOL e5fd788a0a7ba843e0495f8c54d38fb1b3ce2e00bbb55756fd121aeac033eb2cabf62adacb9636df0bc148abb0311818fb450cc120b64f732a11d794da0e80a7
+MISC ChangeLog 3207 SHA256 ecd45265e635136f3fa32b3700db183392f136cf344d520f322661723cefee73 SHA512 2877b43abc4fc7f5678eb316d93ebee42ae6f166eb09498945fb47b2391c5ab3168b9f558c818eba99172756eff6c1a7564688f337bfacb78d84c6d3aa434ccb WHIRLPOOL 52d7dce4aba13cbd4ecc80866d9410590e6d78b52d7cd115557e962b589b799b12cd313a64de14fb33717dbd661e678150a07920c44bad15e375c61af39d0d21
 MISC metadata.xml 161 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1 SHA512 425caf0160f1410ce7bf1d4639020be7f6335152c339edbce80676bff4166f1cab3ae9e13161c47b98dc00741dab3bfa45e9572a3314844476e480f5c2b58d7d WHIRLPOOL ad7cdd3352dbc12cb4181fb5d63b5aee5ce3a151b975c12a96c4a5c91f751736d27282ad22633c7e768230266bce5d17947735d33ef5c5c2341c3f9435b9ebb0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlH0KzcACgkQvFcC4BYPU0pBVQCeKd81YqoXOgdJ+5Ybu0AKtjgz
-aHIAnjtQwd+cK1mmpKioDGpe3M8Ac3mY
-=Ccdn
+iQJ8BAEBCABmBQJT/eI1XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOJ7MQAKlgyfy8ozc9l/H/BgTMxZk1
+mFssvkpnbMSYFbfCg6R3l4GRPJCUOuwUa1aHcbMAYiWuYxPlC5FffPYdINo4saV0
+/WCxcthcNn0B4oZ2UMn8SVZFsQRONEXPbmz6HEUk0n3OJA5kU53XguGAH57+T43b
+A4r0GnG1n0lgEDa2mGO6l0e4/JhkwI3A1158H9Pi8AX5GeY2XwW9KsSLqUslqZeX
+TDzxT0sz3IGaH8o/5WcT/15NQI5qfbLHeG32wDFbth5vK/AZr0r4tnfe+F/dd+No
+8b9ytO0rN1+HP5TOtJ+QYGVKwgPbx9VAuYEVgDyafiTu+XAI4Tu7x2yQ0HoBGxPX
+pANTlDaxqKrh0SdGP+8WC1+R7/Psj/vctlSlz1zjsmOn6/yu8DgK3RHIIhmq+kKN
+/ksv5T2nxVzX+dJVM89jQlvu3XOy5b/S0B0vsLtHgGaAAqQRT6qvg4vRdNBpXLmb
+Ua86aAnLCrz13F+73U5dcS6fGrfwHsthgD/BYfZ4qx/aLrmnkNhig5Np7UnpY7dT
+ZiUqsQs76eKcwvSpp9104+VJX3YoM+0tcnwVHAHD0SWhiQuPGG7U2WZzfe8HMmNN
+KRkX5u7IT8fn/nS2pD8g0gR6r0k/fRmCr9XjmNnmpz90luvPAA/S7e99flMkrEn0
+u21zdD6BXm4ZYlhU/FjU
+=ncY2
 -----END PGP SIGNATURE-----
