@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/scrot
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/scrot/ChangeLog,v 1.24 2013/07/27 20:19:02 aballier Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/scrot/ChangeLog,v 1.25 2014/08/27 13:50:44 mgorny Exp $
+
+*scrot-0.8-r1 (27 Aug 2014)
+
+  27 Aug 2014; Michał Górny <mgorny@gentoo.org> +scrot-0.8-r1.ebuild:
+  Convert to a modern EAPI and bash-completion-r1.
 
   27 Jul 2013; Alexis Ballier <aballier@gentoo.org> scrot-0.8.ebuild:
   keyword ~amd64-fbsd thanks to Yuta SATOH, bug #477644
